<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="AC">AC</string>
    <string name="plusandminus">-/+</string>
    <string name="present">%</string>
    <string name="delit">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="miltiply">X</string>
    <string name="ravno">=</string>
    <string name="dot">,</string>
    <string name="policies">Policies</string>
    <string name="policy">Policy</string>
    <string name="productC">Product Category</string>
    <string name="country">Origin Country</string>
    <string name="brand">Brand</string>
    <string name="deleteAll">Delete All</string>
</resources>