<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/perexod"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@color/red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.button.MaterialButton>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintTop_toTopOf="parent"
><TextView
        android:id="@+id/text"
        android:maxLines="1"

        android:ellipsize="end"
        android:layout_marginHorizontal="34dp"
        android:layout_gravity="end|bottom"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    </FrameLayout>
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/grayButton"
                android:id="@+id/AC"
                android:onClick="onNumberClick"
                android:text="@string/AC">


            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"

                style="@style/grayButton"
                android:id="@+id/plusorminus"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="6dp"
                android:text="@string/plusandminus"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"

                android:id="@+id/present"
                style="@style/grayButton"
                android:layout_marginVertical="6dp"
                android:text="@string/present"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"

                android:id="@+id/delit"
                style="@style/orangeButton"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="6dp"
                android:text="@string/delit"></com.google.android.material.button.MaterialButton>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"

                android:id="@+id/seven"
                style="@style/grayDButton"
                android:layout_marginVertical="6dp"
                android:text="@string/seven">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"

                android:id="@+id/eight"
                style="@style/grayDButton"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="6dp"
                android:text="@string/eight"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"

                android:id="@+id/nine"
                style="@style/grayDButton"

                android:layout_marginVertical="6dp"
                android:text="@string/nine"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multipli"
                style="@style/orangeButton"
                android:onClick="onOperationClick"


                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="6dp"
                android:text="@string/miltiply"></com.google.android.material.button.MaterialButton>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"

                android:id="@+id/four"
                style="@style/grayDButton"
                android:layout_marginVertical="6dp"

                android:text="@string/four">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton

                android:onClick="onNumberClick"

                android:id="@+id/five"
                style="@style/grayDButton"
                android:layout_marginHorizontal="16dp"

                android:layout_marginVertical="6dp"
                android:text="@string/five"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"

                android:id="@+id/six"
                style="@style/grayDButton"

                android:layout_marginVertical="6dp"
                android:text="@string/six"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"

                android:id="@+id/minus"
                style="@style/orangeButton"

                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="6dp"
                android:text="@string/minus"></com.google.android.material.button.MaterialButton>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"

                style="@style/grayDButton"
                android:id="@+id/one"
                android:layout_marginVertical="6dp"

                android:text="@string/one">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"

                style="@style/grayDButton"
                android:id="@+id/two"


                android:layout_marginHorizontal="16dp"

                android:layout_marginVertical="6dp"
                android:text="@string/two"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"

                android:id="@+id/three"
                style="@style/grayDButton"

                android:layout_marginVertical="6dp"
                android:text="@string/three"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"

                android:id="@+id/plus"
                style="@style/orangeButton"

                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="6dp"
                android:text="@string/plus"></com.google.android.material.button.MaterialButton>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"

                android:id="@+id/zero"
                style="@style/grayDButton"
                android:layout_width="176dp"
                android:layout_marginVertical="6dp"
                android:paddingHorizontal="30dp"
                android:text="@string/zero"
                android:textAlignment="textStart">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"

                android:id="@+id/dot"
                style="@style/grayDButton"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="6dp"
                android:text="@string/dot">


            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"

                android:id="@+id/ravna"
                style="@style/orangeButton"
                android:layout_marginVertical="6dp"
                android:layout_marginEnd="12dp"
                android:text="@string/ravno">

            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>