<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/idk"
    tools:context=".MainActivity2">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/policy"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        android:gravity="start"
        android:padding="15dp"
        app:cornerRadius="10dp"
        android:layout_marginTop="190dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
android:text="@string/policy"
        >
    </com.google.android.material.button.MaterialButton>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/product"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        android:gravity="start"
        android:padding="15dp"
        app:cornerRadius="10dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/policy"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/productC"
        >
    </com.google.android.material.button.MaterialButton>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/country"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        android:gravity="start"
        android:padding="15dp"
        app:cornerRadius="10dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/product"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/country"
        >
    </com.google.android.material.button.MaterialButton>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/brand"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        android:gravity="start"
        android:padding="15dp"
        app:cornerRadius="10dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/country"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/brand"
        >
    </com.google.android.material.button.MaterialButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/policies"
        android:textColor="@color/black"
        android:textSize="48dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

    </TextView>
    <com.google.android.material.button.MaterialButton
        app:cornerRadius="10dp"
        android:textColor="@color/white"
        android:text="@string/deleteAll"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_width="150dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/red"

        >
    </com.google.android.material.button.MaterialButton>
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/zero"
        android:textColor="@color/black"
        android:textSize="48dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brand"

        >

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="463dp"
            android:layout_height="147dp"
            android:src="@drawable/img"

            >

        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="452dp"
            android:layout_height="95dp"
            android:src="@drawable/img_1"

            >

        </ImageView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>